Preparing initial publication

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,59 @@
 baseURL = "https://www.morling.dev/"
 languageCode = "en-us"
-title = "morling.dev"
-theme = "ananke"
+title = "Gunnar Morling"
+theme = "ezhil"
+copyright = "© 2019 Gunnar Morling"
+
+[params]
+	# Blog subtitle which appears below blog title. Supports markdown.
+	subtitle = "Random Musings on All Things Software Engineering"
+	# Number of posts to show in recent posts list (Optional). Defaults to 10.
+	recentPostsCount = 10
+	# Content types which are excluded from recent posts and archive page (Optional). Defaults to ["page"]
+	excludedTypes = ["page"]
+	# Content types which are excludes Disqus comments (Optional). Defaults to ["page"]
+	disableDisqusTypes = ["page"]
+	# If social media links are enabled then enable this to fetch icons from CDN instead of hosted on your site.
+	featherIconsCDN = true
+
+[[menu.main]]
+name = "Blog"
+url = "/"
+weight = 1
+
+[[menu.main]]
+name = "Projects"
+url = "/projects"
+weight = 2
+
+# [[menu.main]]
+# name = "Presentations"
+# url = "/presentations"
+# weight = 3
+
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 4
+
+
+# Social media links which shows up on site header.
+# Uses feather icons for icons. You can [search icon names from here](https://feathericons.com/).
+[[params.social]]
+name = "GitHub"
+icon = "github"
+url = "https://github.com/gunnarmorling"
+
+[[params.social]]
+name = "Twitter"
+icon = "twitter"
+url = "https://twitter.com/gunnarmorling"
+
+[[params.social]]
+name = "GitLab"
+icon = "gitlab"
+url = "https://gitlab.com/gunnar.morling"
+
+# Enable tags.
+[taxonomies]
+   tag = "tags"
