--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,8 @@ copyright = "© 2019 Gunnar Morling"
 	subtitle = "Random Musings on All Things Software Engineering"
 	# Number of posts to show in recent posts list (Optional). Defaults to 10.
 	recentPostsCount = 10
+	# Content types which are included in home page recent posts list.
+	mainSections = ["blog"]
 	# Content types which are excluded from recent posts and archive page (Optional). Defaults to ["page"]
 	excludedTypes = ["page"]
 	# Content types which are excludes Disqus comments (Optional). Defaults to ["page"]
@@ -55,5 +57,5 @@ icon = "gitlab"
 url = "https://gitlab.com/gunnar.morling"
 
 # Enable tags.
-[taxonomies]
-   tag = "tags"
+# [taxonomies]
+# tag = "tags"
