Adding conferences page

--- a/config.toml
+++ b/config.toml
@@ -28,10 +28,10 @@ name = "Projects"
 url = "/projects"
 weight = 2
 
-# [[menu.main]]
-# name = "Presentations"
-# url = "/presentations"
-# weight = 3
+[[menu.main]]
+name = "Conferences"
+url = "/conferences"
+weight = 3
 
 [[menu.main]]
 name = "About"
