--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,11 @@ copyright = "© 2019 Gunnar Morling"
 	# If social media links are enabled then enable this to fetch icons from CDN instead of hosted on your site.
 	featherIconsCDN = true
 
+	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
+	# root by Hugo. For example if you have custom CSS file under `static/css/custom.css` then
+	# you can specify custom css path as `css/custom.css`.
+	customCSS = "css/morlingdev.css"
+
 [[menu.main]]
 name = "Blog"
 url = "/"
