--- a/config.toml
+++ b/config.toml
@@ -39,9 +39,14 @@ url = "/conferences"
 weight = 3
 
 [[menu.main]]
+name = "Podcasts"
+url = "/podcasts"
+weight = 4
+
+[[menu.main]]
 name = "About"
 url = "/about"
-weight = 4
+weight = 5
 
 
 # Social media links which shows up on site header.
