--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/budparr/gohugo-theme-ananke.git
 [submodule "themes/ezhil"]
 	path = themes/ezhil
-	url = https://github.com/vividvilla/ezhil.git
+	url = https://github.com/gunnarmorling/ezhil.git
