[gh-pages] Installing AsciiDoctor

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,9 @@ jobs:
       with:
         submodules: true
 
+    - name: Install AsciiDoctor
+      run: sudo apt-get install asciidoctor
+
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
