Syntax highlighting via AsciiDoctor;
See https://rgielen.net/posts/2019/creating-a-blog-with-hugo-and-asciidoctor/

Needs gem install rouge before.

--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,9 @@ copyright = "© 2019 Gunnar Morling"
 	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
 	# root by Hugo. For example if you have custom CSS file under `static/css/custom.css` then
 	# you can specify custom css path as `css/custom.css`.
-	customCSS = "css/morlingdev.css"
+	# Rouge CSS files (syntax highlighter used by AsciiDoctor) are obtained via
+	# rougify style base16.dark > static/css/base16.dark.css
+	customCSS = ["css/base16.dark.css", "css/morlingdev.css"]
 
 [[menu.main]]
 name = "Blog"
