Installing Rouge in GH Action workflow

--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -13,8 +13,11 @@ jobs:
       with:
         submodules: true
 
-    - name: Install AsciiDoctor
-      run: sudo apt-get install asciidoctor
+    - name: Install Ruby Dev
+      run: sudo apt-get install ruby-dev
+
+    - name: Install AsciiDoctor and Rouge
+      run: sudo gem install asciidoctor rouge
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
