--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Gunnar Morling"
 theme = "ezhil"
 copyright = "© 2019 Gunnar Morling"
+disqusShortname = "morlingdev"
 
 [params]
 	# Blog subtitle which appears below blog title. Supports markdown.
