📺 Enabling YouTube privacy

--- a/config.toml
+++ b/config.toml
@@ -72,3 +72,6 @@ url = "https://gitlab.com/gunnar.morling"
 # Enable tags.
 # [taxonomies]
 # tag = "tags"
+
+[privacy.youtube]
+privacyEnhanced = true
