--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Gunnar Morling"
 theme = "ezhil"
 copyright = "© 2020 Gunnar Morling"
 disqusShortname = "morlingdev"
+googleAnalytics = "UA-156032495-1"
 
 [params]
 	# Blog subtitle which appears below blog title. Supports markdown.
@@ -75,3 +76,8 @@ url = "https://gitlab.com/gunnar.morling"
 
 [privacy.youtube]
 privacyEnhanced = true
+
+[privacy.googleAnalytics]
+anonymizeIP = true
+respectDoNotTrack = true
+useSessionStorage = true
