Avoiding JS for loading feather icons

--- a/config.toml
+++ b/config.toml
@@ -55,6 +55,12 @@ weight = 5
 
 # Social media links which shows up on site header.
 # Uses feather icons for icons. You can [search icon names from here](https://feathericons.com/).
+
+[[params.social]]
+name = "RSS FEED"
+icon = "rss"
+url = "/blog/index.xml"
+
 [[params.social]]
 name = "GitHub"
 icon = "github"
@@ -64,11 +70,6 @@ url = "https://github.com/gunnarmorling"
 name = "Twitter"
 icon = "twitter"
 url = "https://twitter.com/gunnarmorling"
-
-[[params.social]]
-name = "GitLab"
-icon = "gitlab"
-url = "https://gitlab.com/gunnar.morling"
 
 # Enable tags.
 # [taxonomies]
