Adding search index

--- a/config.toml
+++ b/config.toml
@@ -82,3 +82,12 @@ privacyEnhanced = true
 anonymizeIP = true
 respectDoNotTrack = true
 useSessionStorage = true
+
+[outputFormats.SearchIndex]
+mediaType = "application/json"
+baseName = "searchindex"
+isPlainText = true
+notAlternative = true
+
+[outputs]
+home = ["HTML","RSS", "SearchIndex"]
