--- a/config.toml
+++ b/config.toml
@@ -34,22 +34,22 @@ weight = 1
 
 [[menu.main]]
 name = "Projects"
-url = "/projects"
+url = "/projects/"
 weight = 2
 
 [[menu.main]]
 name = "Conferences"
-url = "/conferences"
+url = "/conferences/"
 weight = 3
 
 [[menu.main]]
 name = "Podcasts"
-url = "/podcasts"
+url = "/podcasts/"
 weight = 4
 
 [[menu.main]]
 name = "About"
-url = "/about"
+url = "/about/"
 weight = 5
 
 
