🔎 Adding serverless search

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ copyright = "© 2020 Gunnar Morling"
 disqusShortname = "morlingdev"
 googleAnalytics = "UA-156032495-1"
 
+
 [params]
 	# Blog subtitle which appears below blog title. Supports markdown.
 	subtitle = "Random Musings on All Things Software Engineering"
@@ -19,6 +20,9 @@ googleAnalytics = "UA-156032495-1"
 	disableDisqusTypes = ["page"]
 	# If social media links are enabled then enable this to fetch icons from CDN instead of hosted on your site.
 	featherIconsCDN = true
+
+	searchURL = "https://jxs24shqs7.execute-api.eu-central-1.amazonaws.com/Prod/"
+	apiKey = "abcdefg123456abcdefg123456"
 
 	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
 	# root by Hugo. For example if you have custom CSS file under `static/css/custom.css` then
