Error message in case search request fails;
Also doing another warm-up call after staying on the page long enough

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,7 @@ googleAnalytics = "UA-156032495-1"
 	featherIconsCDN = true
 
 	searchURL = "https://jxs24shqs7.execute-api.eu-central-1.amazonaws.com/Prod/"
+	# searchURL = "http://localhost:8080/"
 	apiKey = "abcdefg123456abcdefg123456"
 
 	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
