Search via CloudFlare

--- a/config.toml
+++ b/config.toml
@@ -21,8 +21,8 @@ googleAnalytics = "UA-156032495-1"
 	# If social media links are enabled then enable this to fetch icons from CDN instead of hosted on your site.
 	featherIconsCDN = true
 
-	searchURL = "https://jxs24shqs7.execute-api.eu-central-1.amazonaws.com/Prod/"
 	# searchURL = "http://localhost:8080/"
+	searchURL = "https://search.gunnar-morling.workers.dev/Prod/"
 	apiKey = "ff90d45f4afad3bd914c"
 
 	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
