--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -18,11 +18,12 @@ jobs:
       run: docker run --rm -v $PWD:/src quay.io/gunnarmorling/hugo-builder bash -c "cd /src && /hugo/hugo -F"
 
     - name: Preview
-    - uses: afc163/surge-preview@v1
+      uses: afc163/surge-preview@v1
       id: preview_step
       with:
         surge_token: ${{ secrets.SURGE_TOKEN }}
         github_token: ${{ secrets.SURGE_GH_TOKEN }}
         dist: public
+
     - name: Get the preview_url
       run: echo "url => ${{ steps.preview_step.outputs.preview_url }}"
