Adding preview via surge.sh

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,9 +1,8 @@
 name: Preview
 
 on:
-  push:
-    branches:
-    - master
+  pull_request_target:
+    types: [opened, synchronize, reopened]
 
 jobs:
   build-deploy:
