Adding preview via surge.sh

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -23,7 +23,7 @@ jobs:
         surge_token: ${{ secrets.SURGE_TOKEN }}
         github_token: ${{ secrets.SURGE_GH_TOKEN }}
         dist: public
-        failOnError: 'true'
+        failOnError: 'false'
         build: |
           echo Deploying to surge.sh
 
