Adding preview via surge.sh

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -21,7 +21,7 @@ jobs:
       id: preview_step
       with:
         surge_token: ${{ secrets.SURGE_TOKEN }}
-        github_token: ${{ secrets.SURGE_GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         dist: public
         failOnError: 'false'
         build: |
