--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -13,10 +13,8 @@ jobs:
         submodules: true
         ref: refs/pull/${{ github.event.pull_request.number }}/merge
 
-    - name: EventTest
-      run: echo $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
     - name: Prepare
-      run: sed -i 's/googleAnalytics.*//g' config.toml && sed -i 's/baseURL.*/baseURL = \"https://gunnarmorling-morling-dev-preview-pr-$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH").surge.sh/\"/g' config.toml
+      run: sed -i 's/disqusShortname.*//g' config.toml && sed -i 's/googleAnalytics = ".*"//g' config.toml && export PRNUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") && sed -i 's/baseURL.*/baseURL = \"https:\/\/gunnarmorling-morling-dev-preview-pr-'"$PRNUMBER"'.surge.sh\/\"/g' config.toml
 
     - name: Build
       run: docker run --rm -v $PWD:/src quay.io/gunnarmorling/hugo-builder bash -c "cd /src && /hugo/hugo -F"
