--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -14,10 +14,10 @@ jobs:
         ref: refs/pull/${{ github.event.pull_request.number }}/merge
 
     - name: Prepare
-      run: sed -i 's/disqusShortname.*//g' config.toml && sed -i 's/googleAnalytics = ".*"//g' config.toml && export PRNUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") && sed -i 's/baseURL.*/baseURL = \"https:\/\/gunnarmorling-morling-dev-preview-pr-'"$PRNUMBER"'.surge.sh\/\"/g' config.toml
+      run: export PRNUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") && echo 'baseURL = "https://gunnarmorling-morling-dev-preview-pr-'"$PRNUMBER"'.surge.sh/"' >> config/staging/config.toml
 
     - name: Build
-      run: docker run --rm -v $PWD:/src quay.io/gunnarmorling/hugo-builder bash -c "cd /src && /hugo/hugo -F"
+      run: docker run --rm -v $PWD:/src quay.io/gunnarmorling/hugo-builder bash -c "cd /src && /hugo/hugo -F --environment staging"
 
     - name: Preview
       uses: afc163/surge-preview@v1
