--- a/.github/workflows/preview_teardown.yml
+++ b/.github/workflows/preview_teardown.yml
@@ -1,7 +1,7 @@
 name: Surge.sh Teardown
 
 on:
-  pull_request_target:
+  pull_request:
     # when using teardown: 'true', add default event types + closed event type
     types: [closed]
 
