📝 README update; adding security config for current Hugo versions

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -96,3 +96,14 @@ notAlternative = true
 
 [outputs]
 home = ["HTML","RSS", "SearchIndex"]
+
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$', 'asciidoctor']
+    osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
+  [security.funcs]
+    getenv = ['^HUGO_']
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
