Moving search to render.com

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -22,7 +22,7 @@ googleAnalytics = "UA-156032495-1"
 	featherIconsCDN = true
 
 	# searchURL = "http://localhost:8080/"
-	searchURL = "https://search.gunnar-morling.workers.dev/Prod/"
+	searchURL = "https://search-morling-dev.onrender.com/"
 	apiKey = "ff90d45f4afad3bd914c"
 
 	# Custom CSS added to default styles. Files added to `static` folder is copied as it is to
