Adding LinkedIn icon

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -76,6 +76,11 @@ name = "Twitter"
 icon = "twitter"
 url = "https://twitter.com/gunnarmorling"
 
+[[params.social]]
+name = "LinkedIn"
+icon = "linkedin"
+url = "https://www.linkedin.com/in/gunnar-morling-2b44b7229/"
+
 # Enable tags.
 # [taxonomies]
 # tag = "tags"
