Adding Mastodon link

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -81,6 +81,11 @@ name = "LinkedIn"
 icon = "linkedin"
 url = "https://www.linkedin.com/in/gunnar-morling-2b44b7229/"
 
+[[params.social]]
+name = "Mastodon"
+icon = "message-square"
+url = "https://mastodon.online/@gunnarmorling"
+
 # Enable tags.
 # [taxonomies]
 # tag = "tags"
