--- a/.github/workflows/gh-pages-deployment.yml
+++ b/.github/workflows/gh-pages-deployment.yml
@@ -14,7 +14,7 @@ jobs:
         submodules: true
 
     - name: Build
-      run: docker run --rm -v $PWD:/src quay.io/gunnarmorling/hugo-builder bash -c "cd /src && /hugo/hugo -F"
+      run: docker run --rm -v $PWD:/src gunnarmorling/hugo-builder:20240706 bash -c "cd /src && /hugo/hugo -F"
       env:
         DOCKER_ENABLE_DEPRECATED_PULL_SCHEMA_1_IMAGE: true
     - name: Deploy
