Updating social links

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -72,6 +72,11 @@ icon = "github"
 url = "https://github.com/gunnarmorling"
 
 [[params.social]]
+name = "Bluesky"
+icon = "cloud"
+url = "https://bsky.app/profile/gunnarmorling.dev"
+
+[[params.social]]
 name = "Twitter"
 icon = "twitter"
 url = "https://twitter.com/gunnarmorling"
@@ -79,7 +84,7 @@ url = "https://twitter.com/gunnarmorling"
 [[params.social]]
 name = "LinkedIn"
 icon = "linkedin"
-url = "https://www.linkedin.com/in/gunnar-morling-2b44b7229/"
+url = "https://www.linkedin.com/in/gunnar-morling/"
 
 [[params.social]]
 name = "Mastodon"
