--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -112,6 +112,13 @@ notAlternative = true
 [outputs]
 home = ["HTML","RSS", "SearchIndex"]
 
+[markup]
+  [markup.asciidocExt]
+    preserveTOC = true
+    [markup.asciidocExt.attributes]
+      "toc" = ""
+      "toclevels" = "2"
+
 [security]
   enableInlineShortcodes = false
   [security.exec]
