--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -112,6 +112,14 @@ notAlternative = true
 [outputs]
 home = ["HTML","RSS", "SearchIndex"]
 
+[minify]
+  disableCSS = true
+  disableHTML = true
+  disableJS = true
+  disableJSON = true
+  disableSVG = true
+  disableXML = true
+
 [markup]
   [markup.asciidocExt]
     preserveTOC = true
