--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -113,9 +113,9 @@ notAlternative = true
 home = ["HTML","RSS", "SearchIndex"]
 
 [minify]
-  disableCSS = true
+  disableCSS = false
   disableHTML = true
-  disableJS = true
+  disableJS = false
   disableJSON = true
   disableSVG = true
   disableXML = true
