Adding section anchors

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -126,6 +126,7 @@ home = ["HTML","RSS", "SearchIndex"]
     [markup.asciidocExt.attributes]
       "toc" = ""
       "toclevels" = "2"
+      "sectanchors" = "after"
 
 [security]
   enableInlineShortcodes = false
