Adding list of related posts

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,7 +4,6 @@ title = "Gunnar Morling"
 theme = "ezhil"
 copyright = "© 2019 - 2025 Gunnar Morling"
 disqusShortname = "morlingdev"
-googleAnalytics = "UA-156032495-1"
 
 
 [params]
@@ -92,8 +91,8 @@ icon = "message-square"
 url = "https://mastodon.online/@gunnarmorling"
 
 # Enable tags.
-# [taxonomies]
-# tag = "tags"
+[taxonomies]
+tag = "tags"
 
 [privacy.youtube]
 privacyEnhanced = true
@@ -127,6 +126,17 @@ home = ["HTML","RSS", "SearchIndex"]
       "toc" = ""
       "toclevels" = "2"
       "sectanchors" = "after"
+
+[related]
+  includeNewer = true
+  threshold = 50
+  toLower = true
+  [[related.indices]]
+    name = "tags"
+    weight = 100
+  [[related.indices]]
+    name = "date"
+    weight = 10
 
 [security]
   enableInlineShortcodes = false
